@@ -1,5 +1,7 @@
 * 2005-05-09 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fix problem with log axis if minimum is zero
+	- Highlight setting label if has mouse over / focus / context menu
+	- Remove label from top of context menus
 	
 * 2005-05-08 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Add embed module to embed Veusz in other Python apps
